Kitob modellari, logout va role permission (qisman) qo'shildi
