# backend/src/swagger.json
@@ -96,6 +96,21 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"LogOutDto": {
+				"description": "Log Out DTO",
+				"properties": {
+					"refreshToken": {
+						"type": "string",
+						"description": "User's refresh token",
+						"example": "refresh_token"
+					}
+				},
+				"required": [
+					"refreshToken"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -237,6 +252,66 @@
 							"schema": {
 								"$ref": "#/components/schemas/VerifyCodeDto",
 								"description": "Telefon raqami va tasdiqlash kodi"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/admin-test": {
+			"get": {
+				"operationId": "AdminTest",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Admin paneli uchun test marshruti",
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/auth/logout": {
+			"post": {
+				"operationId": "LogOut",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Foydalanuvchi tizimdan chiqishi",
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"description": "Faqatgina refresh token",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LogOutDto",
+								"description": "Faqatgina refresh token"
 							}
 						}
 					}
